--- a/dubbo-consumer-server/pom.xml
+++ b/dubbo-consumer-server/pom.xml
@@ -16,7 +16,8 @@
 
     <properties>
         <start-class>com.yofc.YofcPlatformBootstrap</start-class>
-        <dubbo.version>2.7.1</dubbo.version>
+        <dubbo.version>2.7.0</dubbo.version>
+        <zookeeper.version>2.7.1</zookeeper.version>
         <java.version>1.8</java.version>
         <mysql-connector.version>5.1.45</mysql-connector.version>
         <druid.version>1.1.9</druid.version>
@@ -71,7 +72,7 @@
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-dependencies-zookeeper</artifactId>
-            <version>${dubbo.version}</version>
+            <version>${zookeeper.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>slf4j-log4j12</artifactId>
